# DEHP-STEPAP242

./: .gitignore  DEHPSTEPAP242-tests.nunit  README.md  appveyor.yml
DEHP-STEPAP242/: .editorconfig  DEHP-STEPAP242.sln
DEHP-STEPAP242/DEHPSTEPAP242/: App.xaml  App.xaml.cs  DEHPSTEPAP242.csproj  NLog.config  Settings.cs
DEHP-STEPAP242/DEHPSTEPAP242.Tests/: AppTestFixture.cs  DEHPSTEPAP242.Tests.csproj
DEHP-STEPAP242/DEHPSTEPAP242.Tests/DstController/: DstControllerTestFixture.cs
DEHP-STEPAP242/DEHPSTEPAP242.Tests/MappingRules/: Step3DPartToElementDefinitionRuleTestFixture.cs
DEHP-STEPAP242/DEHPSTEPAP242.Tests/Services/: FileStoreServiceFixture.cs
DEHP-STEPAP242/DEHPSTEPAP242.Tests/StepDiff/: StepComparisonTestFixture.cs
DEHP-STEPAP242/DEHPSTEPAP242.Tests/ViewModels/: DstObjectBrowserViewModelFixture.cs  MappingConfigurationDialogViewModelFixture.cs
DEHP-STEPAP242/DEHPSTEPAP242.TestsNew/: AutomatedTest.cs  DEHPSTEPAP242.TestsNew.csproj
DEHP-STEPAP242/DEHPSTEPAP242/Builds/HighLevelRepresentationBuilder/: HLRBuilder.cs  HighLevelRepresentationBuilder.cs  IHLRBuilder.cs  IHighLevelRepresentationBuilder.cs
DEHP-STEPAP242/DEHPSTEPAP242/DstController/: DstController.cs  IDstController.cs
DEHP-STEPAP242/DEHPSTEPAP242/Enumerator/: OpcClientStatusCode.cs
DEHP-STEPAP242/DEHPSTEPAP242/Events/: DownloadFileRevisionEvent.cs  ExternalIdentifierMapChangedEvent.cs  UpdateHighLevelRepresentationTreeEvent.cs
DEHP-STEPAP242/DEHPSTEPAP242/MappingRules/: Step3DPartToElementDefinitionRule.cs  Step3DTargetSourceParameter.cs  Step3dPartToElementDefinitionRule.cs
DEHP-STEPAP242/DEHPSTEPAP242/Properties/: Settings.Designer.cs
DEHP-STEPAP242/DEHPSTEPAP242/Resources/: OpcClient.Config.xml
DEHP-STEPAP242/DEHPSTEPAP242/Services/DstHubService/: DstHubService.cs  IDstHubService.cs
DEHP-STEPAP242/DEHPSTEPAP242/Services/FileStoreService/: FileStoreService.cs  IFileStoreService.cs
DEHP-STEPAP242/DEHPSTEPAP242/Services/OpcConnector/: OpcClientService.cs  OpcSessionHandler.cs  OpcSessionReconnectHandler.cs
DEHP-STEPAP242/DEHPSTEPAP242/Settings/: AppSettings.cs
DEHP-STEPAP242/DEHPSTEPAP242/ViewModel/: DataSourceViewModel.cs  DstBrowserHeaderViewModel.cs  DstDataSourceViewModel.cs  DstObjectBrowserViewModel.cs  DstStatusBarControlViewModel.cs  DstStep3DFileHeaderViewModel.cs  DstTransferControlViewModel.cs  HubDataSourceViewModel.cs  HubFileStoreBrowserViewModel.cs  HubObjectBrowserViewModel.cs  MainWindowViewModel.cs  MappingViewModel.cs  Step3DPartTreeNode.cs
DEHP-STEPAP242/DEHPSTEPAP242/ViewModel/Dialogs/: DstCompareStepFilesViewModel.cs  DstLoadFileViewModel.cs  DstLoginViewModel.cs  DstUserSettingsViewModel.cs  InputDialogViewModel.cs  MappingConfigurationDialogViewModel.cs  MappingConfigurationManagerDialogViewModel.cs
DEHP-STEPAP242/DEHPSTEPAP242/ViewModel/Interfaces/: IDstBrowserHeaderViewModel.cs  IDstDataSourceViewModel.cs  IDstNetChangePreviewViewModel.cs  IDstNodeDiffData.cs  IDstObjectBrowserViewModel.cs  IHubDataSourceViewModel.cs  IHubFileStoreBrowserViewModel.cs  IHubNetChangePreviewViewModel.cs  IHubObjectBrowserViewModel.cs  IMainWindowViewModel.cs  IMappingViewModel.cs
DEHP-STEPAP242/DEHPSTEPAP242/ViewModel/NetChangePreview/: DstNetChangePreviewViewModel.cs  HubNetChangePreviewViewModel.cs
DEHP-STEPAP242/DEHPSTEPAP242/ViewModel/Rows/: MappedThing.cs  MappingRowViewModel.cs  Step3DDiffRowViewModel.cs  Step3DRowData.cs  Step3DRowViewModel.cs  Step3dRowViewModel.cs
DEHP-STEPAP242/DEHPSTEPAP242/Views/: DstBrowserHeader.xaml  DstBrowserHeader.xaml.cs  DstObjectBrowser.xaml  DstObjectBrowser.xaml.cs  HubFileStoreBrowser.xaml  HubFileStoreBrowser.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TreeListControl.xaml  TreeListControl.xaml.cs
DEHP-STEPAP242/DEHPSTEPAP242/Views/Dialogs/: DstCompareStepFiles.xaml  DstCompareStepFiles.xaml.cs  DstLoadFile.xaml  DstLoadFile.xaml.cs  DstLogin.xaml  DstLogin.xaml.cs  DstUserSettings.xaml  DstUserSettings.xaml.cs  InputDialog.xaml  InputDialog.xaml.cs  MappingConfigurationDialog.xaml  MappingConfigurationDialog.xaml.cs  MappingConfigurationManagerDialog.xaml  MappingConfigurationManagerDialog.xaml.cs  RowDetailsControl.xaml  RowDetailsControl.xaml.cs  SimpleUndeterminateProgressBar.xaml  SimpleUndeterminateProgressBar.xaml.cs  UndeterminateProgressBar.xaml  UndeterminateProgressBar.xaml.cs
DEHP-STEPAP242/DEHPSTEPAP242/Views/Rows/: MappingEcosimProThingControl.xaml  MappingEcosimProThingControl.xaml.cs  MappingRow.xaml  MappingRow.xaml.cs  MappingStep3dThingControl.xaml  MappingStep3dThingControl.xaml.cs
DEHP-STEPAP242/STEP3DAdapter/: AssemblyInfo.cpp  STEP3DAdapter.vcxproj  STEP3DAdapter.vcxproj.filters  STEP3DFile.cpp  STEP3DFile.h
DEHP-STEPAP242/STEP3DAdapter.Console/: App.config  Program.cs  STEP3DAdapter.Console.csproj  packages.config
DEHP-STEPAP242/STEP3DAdapter.Console/Properties/: AssemblyInfo.cs
DEHP-STEPAP242/STEP3DAdapter.Tests/: STEP3DAdapter.Tests.csproj  STEP3DFileTests.cs  packages.config
DEHP-STEPAP242/STEP3DAdapter.Tests/Properties/: AssemblyInfo.cs
DEHP-STEPAP242/STEP3DAdapter/Tools/: Tools.cpp  Tools.h
STEP3DWrapper/STEP3DWrapperLibrary/Debug/include/: step3d_dllinterface.h  step3d_wrapper.h
STEP3DWrapper/STEPcode/: CMakeLists.txt  ChangeLog  README.md
STEP3DWrapper/STEPcode/cmake/: SC_Build_opts.cmake
STEP3DWrapper/STEPcode/extra/: CMakeLists.txt
STEP3DWrapper/STEPcode/extra/step3d_wrapper/: CMakeLists.txt  Step3D_Wrapper_Imp.cpp  Step3D_Wrapper_Imp.h  TreeGraphGenerator_Imp.cpp  TreeGraphGenerator_Imp.h  step3d_dllinterface.h  step3d_wrapper.cpp  step3d_wrapper.h
STEP3DWrapper/STEPcode/extra/step3d_wrapper/examples/: dm1-id-214.stp  dm1-id-214.stp_0.dot  dm1-id-214.stp_1.dot  dm1-id-214.stp_2.dot  silla.step  silla.step_0.dot  silla.step_1.dot  silla.step_2.dot
STEP3DWrapper/STEPcode/extra/step3d_wrapper_test/: CMakeLists.txt  main.cpp  unittests.cpp
STEP3DWrapper/STEPcode/extra/step3d_wrapper_test/examples/: ModifiedSimpleCAD.step  MyParts.step  Myparts.FCStd  NotStepFileFormat.step  SimpleCAD.step
STEP3DWrapper/STEPcode/include/: sc_cf.h
(+15 files in other folders)
